--- a/index.html
+++ b/index.html
@@ -76,9 +76,6 @@
         </ul>
 
       </div>
-
-      <!-- <div class="tech-logo" style="background: none;"> <a href="https://www.java.com/en/" target="_blank"><img src="./images/java.png" /></a> <a href="https://spring.io/" target="_blank"><img src="./images/spring-logo-9146a4d3298760c2e7e49595184e1975.svg" /></a> <a href="https://nodejs.org/en/" target="_blank"><img src="./images/590px-Node.js_logo.svg.png" /></a> <a href="https://angular.io/" target="_blank"><img src="./images/angular.png" /></a> <a href="https://www.postgresql.org/" target="_blank"><img src="./images/postgresql-seeklogo.com.svg" /></a> <a href="https://www.python.org/" target="_blank"><img src="./images/Python-logo-notext.svg" /></a> <a href="https://maven.apache.org/" target="_blank"><img src="./images/Maven_logo.svg" /></a> <a href="https://www.mysql.com/" target="_blank"><img src="./images/58481057cef1014c0b5e4951.png" /></a> <a href="https://getbootstrap.com/" target="_blank"><img src="./images/800px-Bootstrap_logo.svg.png" /></a> </div> -->
-
     </aside>
 
     <main>
@@ -272,10 +269,11 @@
                 <ul>
                   <li>Involved in various phases of Software Development Life Cycle (<b>SDLC</b>), including requirement gathering, modeling, analysis, architecture design, prototyping, developing and testing.</li>
                   <li>Used Rest Controller in <b>Spring</b> framework to create <b>RESTful Web services</b> and <b>JSON</b> objects for communication.</li>
+                  <li>Used <b>NamedJdbcTemplate</b> to manipulate the records in the database and also Used RowMapper to map the fields in the table.</li>
                   <li>Developed <b>POJOs</b> for Data Model for Java Objects with Relational database tables.</li>
                   <li>Used <b>Postman</b> to test the RESTful API for HTTP requests such as <b>GET, POST, DELETE and PUT</b>.</li>
                   <li>Used <b>GIT</b> for version control tool for merging branches and used <b>Sourcetree</b> to solve conflicts.</li>
-                  <li>Integrated <b>Spring Security</b> to validate the users.</li>
+                  <li>Integrated <b>Spring Security</b> for authentication and authorization.</li>
                   <li>Used <b>NamedJDBC Template</b> to query the database and Created <b>DAO</b> classes to implement CRUD operations.</li>
                   <li>Used <b>DTO</b> classes to get request and to send response.</li>
                 </ul>
@@ -304,10 +302,10 @@
                   <li>Implemented <b>Log4j</b> and <b>I18N</b> technology for a broader perspective of the project.</li>
                   <li>Used <b>Postman</b> to test the RESTful API for HTTP requests such as <b>GET, POST, DELETE and PUT</b>.</li>
                   <li>Used <b>GIT</b> for version control tool for merging branches and used <b>Sourcetree</b> to solve conflicts.</li>
-                  <li>Integrated <b>Spring Security</b> to validate the users.</li>
+                  <li>Integrated <b>Spring Security</b> for authentication and authorization.</li>
                   <li>Used <b>JPA Repository</b> to perform CRUD operations.</li>
                   <li>Used <b>DTO</b> classes to get request and to send response.</li>
-                  <li>Used <b>Maven</b> as a build tool, wrote the dependencies for the jars</li>
+                  <li>Used <b>Maven</b> as a build tool.</li>
                 </ul>
               </p>
               <p>Technology: Core Java & 8 above, Spring, Spring Boot, Spring Data JPA, Restful Web Services, Spring Security, JSON, Maven, MongoDB, HTML5, CSS3, Bootstrap3, AngularJS</p>
@@ -338,10 +336,9 @@
                   <li>Implemented <b>Log4j</b> and <b>I18N</b> technology for a broader perspective of the project.</li>
                   <li>Used <b>Postman</b> to test the RESTful API for HTTP requests such as <b>GET, POST, DELETE and PUT</b>.</li>
                   <li>Used <b>GIT</b> for version control tool for merging branches and used <b>Sourcetree</b> to solve conflicts.</li>
-                  <li>Integrated <b>Spring Security</b> and <b>JWT</b> to validate the users.</li>
-                  <li>Used <b>Specification Executor</b> Criteria API to query the database and perform other CRUD operations.</li>
+                  <li>Integrated <b>Spring Security</b> for authentication and authorization.</li>
                   <li>Used <b>DTO</b> classes to get request and to send response.</li>
-                  <li>Used <b>Maven</b> as a build tool, wrote the dependencies for the jars</li>
+                  <li>Used <b>Maven</b> as a build tool.</li>
                 </ul>
               </p>
               <p>Technology: Core Java & 8 above, Spring MVC, Spring Boot, Spring Data JPA, Restful Web Services, Spring Security, JSON, Maven, Neo4j, HTML5, CSS3, Bootstrap3, Jquery, JSP</p>
@@ -369,11 +366,11 @@
                   <li>Implemented <b>Log4j</b> and <b>I18N</b> technology for a broader perspective of the project.</li>
                   <li>Used <b>Postman</b> to test the RESTful API for HTTP requests such as <b>GET, POST, DELETE and PUT</b>.</li>
                   <li>Used <b>GIT</b> for version control tool for merging branches and used <b>Sourcetree</b> to solve conflicts.</li>
-                  <li>Integrated <b>Spring Security</b> and <b>JWT</b> to validate the users.</li>
+                  <li>Integrated <b>Spring Security</b> and <b>JWT</b> for authentication and authorization.</li>
                   <li>Used <b>Specification Executor</b> Criteria API to query the database and perform other CRUD operations.</li>
                   <li>Used <b>DTO</b> classes to get request and to send response.</li>
                   <li>Applied <b>ORM Mappings</b> in the Entity classes.</li>
-                  <li>Used <b>Maven</b> as a build tool, wrote the dependencies for the jars</li>
+                  <li>Used <b>Maven</b> as a build tool.</li>
                 </ul>
               </p>
               <p>Technology: Core Java & 8 above, Spring, Spring Boot, Spring Data JPA, Restful Web Services, Spring Security, JWT, JSON, Maven, PostgreSQL, HTML5, CSS3, Thymeleaf, Material 6, Angular 6</p>
@@ -400,11 +397,11 @@
                   <li>Implemented <b>Log4j</b> and <b>I18N</b> technology for a broader perspective of the project.</li>
                   <li>Used <b>Postman</b> to test the RESTful API for HTTP requests such as <b>GET, POST, DELETE and PUT</b>.</li>
                   <li>Used <b>GIT</b> for version control tool for merging branches and used <b>Sourcetree</b> to solve conflicts.</li>
-                  <li>Integrated <b>Spring Security</b> and <b>JWT</b> to validate the users.</li>
+                  <li>Integrated <b>Spring Security</b> and <b>JWT</b> for authentication and authorization.</li>
                   <li>Used <b>Specification Executor</b> Criteria API to query the database and perform other CRUD operations.</li>
                   <li>Used <b>DTO</b> classes to get request and to send response.</li>
                   <li>Applied <b>ORM Mappings</b> in the Entity classes.</li>
-                  <li>Used <b>Maven</b> as a build tool, wrote the dependencies for the jars</li>
+                  <li>Used <b>Maven</b> as a build tool.</li>
                 </ul>
               </p>
               <p>Technology: Core Java & 8 above, Spring, Spring Boot, Spring Data JPA, Restful Web Services, Spring Security, JSON, JWT, Maven, PostgreSQL, HTML5, CSS3, Bootstrap 4, Angular 7.2</p>
@@ -432,11 +429,11 @@
                   <li>Implemented <b>Log4j</b> and <b>I18N</b> technology for a broader perspective of the project.</li>
                   <li>Used <b>Postman</b> to test the RESTful API for HTTP requests such as <b>GET, POST, DELETE and PUT</b>.</li>
                   <li>Used <b>GIT</b> for version control tool for merging branches and used <b>Sourcetree</b> to solve conflicts.</li>
-                  <li>Integrated <b>Spring Security</b> and <b>JWT</b> to validate the users.</li>
+                  <li>Integrated <b>Spring Security</b> and <b>JWT</b> for authentication and authorization.</li>
                   <li>Used <b>Specification Executor</b> Criteria API to query the database and perform other CRUD operations.</li>
                   <li>Used <b>DTO</b> classes to get request and to send response.</li>
                   <li>Applied <b>ORM Mappings</b> in the Entity classes.</li>
-                  <li>Used <b>Maven</b> as a build tool, wrote the dependencies for the jars</li>
+                  <li>Used <b>Maven</b> as a build tool.</li>
                 </ul>
               </p>
 
@@ -464,11 +461,11 @@
                   <li>Implemented <b>Log4j</b> and <b>I18N</b> technology for a broader perspective of the project.</li>
                   <li>Used <b>Postman</b> to test the RESTful API for HTTP requests such as <b>GET, POST, DELETE and PUT</b>.</li>
                   <li>Used <b>GIT</b> for version control tool for merging branches and used <b>Sourcetree</b> to solve conflicts.</li>
-                  <li>Integrated <b>Spring Security</b> and <b>JWT</b> to validate the users.</li>
+                  <li>Integrated <b>Spring Security</b> and <b>JWT</b> for authentication and authorization.</li>
                   <li>Used <b>Specification Executor</b> Criteria API to query the database and perform other CRUD operations.</li>
                   <li>Used <b>DTO</b> classes to get request and to send response.</li>
                   <li>Applied <b>ORM Mappings</b> in the Entity classes.</li>
-                  <li>Used <b>Maven</b> as a build tool, wrote the dependencies for the jars</li>
+                  <li>Used <b>Maven</b> as a build tool.</li>
                 </ul>
               </p>
               <p>Technology: Core Java & 8 above, Spring, Spring Boot, Spring Data JPA, Restful Web Services, Spring Security, JSON, JWT, Maven, PostgreSQL, HTML5, CSS3, Bootstrap 4, Angular 8</p>
@@ -495,11 +492,11 @@
                   <li>Implemented <b>Log4j</b> and <b>I18N</b> technology for a broader perspective of the project.</li>
                   <li>Used <b>Postman</b> to test the RESTful API for HTTP requests such as <b>GET, POST, DELETE and PUT</b>.</li>
                   <li>Used <b>GIT</b> for version control tool for merging branches and used <b>Sourcetree</b> to solve conflicts.</li>
-                  <li>Integrated <b>Spring Security</b> and <b>JWT</b> to validate the users.</li>
+                  <li>Integrated <b>Spring Security</b> and <b>JWT</b> for authentication and authorization.</li>
                   <li>Used <b>Specification Executor</b> Criteria API to query the database and perform other CRUD operations.</li>
                   <li>Used <b>DTO</b> classes to get request and to send response.</li>
                   <li>Applied <b>ORM Mappings</b> in the Entity classes.</li>
-                  <li>Used <b>Maven</b> as a build tool, wrote the dependencies for the jars</li>
+                  <li>Used <b>Maven</b> as a build tool.</li>
                 </ul>
               </p>
               <p>Technology: Core Java & 8 above, Spring, Spring Boot, Spring Data JPA, Restful Web Services, Spring Security, JWT, JSON, Maven, Log4j, PostgreSQL, HTML5, CSS3, Bootstrap 4, Angular 8</p>
