--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                   server in Amazon AWS</li>
                 <li>Used <b>AWS and Digital Ocean Cloud</b> servers to host the applications</li>
                 <li>Experience in creating test cases using
-                  <b>JUnit</b>(Basics)</li>
+                  <b>JUnit</b></li>
                 <li>Strong
                   <b>Debugging and Troubleshooting</b>
                   skills</li>
