--- a/index.html
+++ b/index.html
@@ -172,6 +172,12 @@
               <br>
 
               <p>
+                <strong>Sonata Software Limited</strong><br>
+                <em>Senior Software Engineer</em><br>
+                <strong>2021 to Til Date</strong>
+              </p>
+
+              <p>
                 <strong>NanoBnk Private Limited</strong><br>
                 <em>Senior Software Engineer</em><br>
                 <strong>2017 to 2020</strong>
