--- a/index.html
+++ b/index.html
@@ -174,19 +174,19 @@
               <p>
                 <strong>Sonata Software Limited</strong><br>
                 <em>Senior Software Engineer</em><br>
-                <strong>2021 to Til Date</strong>
+                <strong>March 2021 to Til Date</strong>
               </p>
 
               <p>
                 <strong>NanoBnk Private Limited</strong><br>
                 <em>Senior Software Engineer</em><br>
-                <strong>2017 to 2020</strong>
+                <strong>November 2017 to September 2020</strong>
               </p>
 
               <p>
                 <strong>10Decoders Consultancy Private Limited</strong><br>
                 <em>Software Engineer</em><br>
-                <strong>2015 to 2017</strong>
+                <strong>March 2015 to September 2017</strong>
               </p>
               
               <hr>
