--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
               <br>
               <p>
                 <strong>Frameworks :</strong>
-                Spring Boot, Spring(MVC & RESTful Web Services), Spring Data JPA, Spring Security, Microservices(basics)
+                Spring Boot, Spring(MVC & RESTful Web Services), Spring Data JPA, Spring Security, Microservices
               </p>
               <p>
                 <strong>Logging Framework :</strong>
