--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
           <a href="index.html">Kumaresan Perumal</a>
         </h2>
 
-        <p>Software Engineering Professional</p>
-        <!-- <p>Full Stack Web Developer</p> -->
         <p>Senior Software Engineer</p>
+        <!-- <p>Full Stack Web Developer</p> -->
+        <p>Java And Angular</p>
 
         <ul class="social">
           <li>
